--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="box">
         <div id="menu">
-<!-- list of animals goes here -->
+<!-- list of movies goes here -->
         </div>
         <div id="movieDetail">
             <img id="pic" src="" alt="movie pic"></img>
