--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Flatiron Movie Theater</title>
+    <title>Ket Movie Theater</title>
     <link rel="stylesheet" href="./main.css">
 </head>
 
